# puzzles

./: .clang-format  .gitignore  compile_commands.json  tool.py
advent-of-code/: .gitignore  new.py
advent-of-code/2017/: mypy.ini
advent-of-code/2017/day13/: solve.py
advent-of-code/2017/day14/: solve.py
advent-of-code/2017/day15/: solve.py
advent-of-code/2017/day16/: solve.py
advent-of-code/2017/day18/: solve.py
advent-of-code/2017/day19/: solve.py
advent-of-code/2017/day20/: small  solve.py  solve2.py
advent-of-code/2017/day8/: part2.py
advent-of-code/2017/day9/: part12.py
advent-of-code/2019/: stack-template.hsfiles
advent-of-code/2019/day02/: .vscode  day02.cabal  package.yaml
advent-of-code/2019/day03/: .gitignore  day03.cabal  package.yaml
advent-of-code/2019/day03_cpp/: CMakeLists.txt  Makefile  main.cpp
advent-of-code/2019/day03_ocaml/: .gitignore  .merlin  day03_ocaml.ml  day03_ocaml_array.ml  day03_ocaml_baseline.ml  day03_ocaml_hashset.ml  day03_ocaml_hashset_opt.ml  day03_ocaml_set.ml  dune
advent-of-code/2019/day04/: day04.cabal  input-small  output  output-p2  package.yaml
advent-of-code/2019/day05/: day05.cabal  package.yaml
advent-of-code/2019/day06/: day06.cabal  package.yaml
advent-of-code/2020/: .gitignore
gcj2018/qual-cubic-ufo/: in-hard1  in1  solve.py  submitted.py  verifier.py
gcj2018/qual-trouble-sort/: solve.py
usaco/: toolconfig.json
usaco/section1.4/: combo.cpp  skidesign.cpp  wormhole.cpp
usaco/section5.4/: telecow.cpp  telecow.in2  telecow.indebug
usaco/section5.5/: hidden.cpp  picture.cpp
(+127 files in other folders)
